test/corpus/precedence.txt
=================
logical
=================

true and false or true;
2 or 3 and 3;

---

(source_file
	(logical_operation
		(logical_operation
			(boolean_literal)
			(boolean_literal)
		)
		(boolean_literal)
	)
	(logical_operation
		(integer_literal)
		(logical_operation
			(integer_literal)
			(integer_literal)
		)
	)
)

====================
arithmetical
====================

1 + 3 * 2;

---

(source_file
	(arithmetic_operation
		(integer_literal)
		(arithmetic_operation
			(integer_literal)
			(integer_literal)
		)
	)
)
